Доделал верстку + адаптировал. Начал щупать логику JS, но случайно создал бесконечный цикл который использовал весь лимит запросов 😅

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -6,10 +6,13 @@ body{
 
     color: var(--light-color);
     background: var(--bg-color);
-
-    overflow: hidden;
 }
 
 * {
     transition-duration: var(--transition-duration);
+}
+
+a{
+    color: var(--light-color);
+    text-decoration: none;
 }
