--- a/styles/blocks/_field.scss
+++ b/styles/blocks/_field.scss
@@ -6,6 +6,11 @@
     justify-content: space-between;    
     width: 100%;
 
+    @include mobile-l{
+        flex-direction: column;
+        row-gap: 20px;
+    }
+
     &__input{
         width: 100%;
         height: var(--input-and-btn-height);
@@ -24,5 +29,9 @@
     &__controls{
         @include flex-center;
         column-gap: 10px;
+        
+        @include mobile-l{
+            width: 100%;
+        }
     }
 }
