--- a/styles/blocks/_gallery.scss
+++ b/styles/blocks/_gallery.scss
@@ -77,6 +77,7 @@
     }
 
     .active{
+        transform: translateY(-5px);
         border: 3px solid transparent;
         box-shadow: var(--box-shadow);
     }
