--- a/styles/blocks/_preview.scss
+++ b/styles/blocks/_preview.scss
@@ -4,24 +4,14 @@
     
     &-list{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
         gap: 25px;
         width: 100%;
-
-        @include tablet-l{
-            grid-template-columns: repeat(2, 1fr)
-        }
-
-        @include mobile{
-            grid-template-columns: repeat(1, 1fr)
-        }
     }
 
     &__item{
         @include flex-center;
 
-        width: 100%;
-        height: 282px;
         border-radius: var(--card-border-radius);
 
         @include hover{
@@ -31,11 +21,13 @@
 
     &__link{
         @include flex-center;
-        height: 100%
+        height: 100%;
+        width: 100%;
     }
 
     &__img{
-        background-size: cover;
         border-radius: var(--card-border-radius);
+        width: 100%;
+        height: 282px;
     }
 }
