--- a/styles/styles.css
+++ b/styles/styles.css
@@ -302,6 +302,7 @@ a {
   }
 }
 .gallery .active {
+  transform: translateY(-5px);
   border: 3px solid transparent;
   box-shadow: var(--box-shadow);
 }
@@ -358,26 +359,14 @@ a {
 }
 .preview-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   gap: 25px;
   width: 100%;
-}
-@media (max-width: 930px) {
-  .preview-list {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (max-width: 767px) {
-  .preview-list {
-    grid-template-columns: repeat(1, 1fr);
-  }
 }
 .preview__item {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 282px;
   border-radius: var(--card-border-radius);
 }
 @media (hover: hover) {
@@ -395,10 +384,12 @@ a {
   justify-content: center;
   align-items: center;
   height: 100%;
+  width: 100%;
 }
 .preview__img {
-  background-size: cover;
   border-radius: var(--card-border-radius);
+  width: 100%;
+  height: 282px;
 }
 
 .btn {
