--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -3,9 +3,11 @@ body{
     font-weight: 600;
 
     font-size: 20px;
+    background: linear-gradient(148deg, rgba(25,25,25,1) 0%, rgba(78,58,110,1) 100%);
 
     color: var(--light-color);
-    background: var(--bg-color);
+
+    position: relative;
 }
 
 * {
